--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "nodemon index",
-    "test": "nyc mocha"
+    "test": "nyc mocha --timeout 100"
   },
   "author": "Alugbin LordRahl Abiodun Olutola",
   "license": "ISC",
